# utcm-exporter

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  RUNBOOK.md  pyproject.toml  resources.json
scripts/: build_resources_catalog.py  cleanup_snapshot_jobs.py  parse_snapshot.py  run_utcm_snapshot.py  test_graph_connectivity.py
src/utcm_exporter/: __init__.py  auth.py  parser.py  resources_catalog.py  utcm_client.py
src/utcm_exporter/docs/: step-1.md  step-5.md
